Refactor include structure

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 			"type": "shell",
 			"label": "(Build) Make kernel image",
 			"command": "make image",
-			"group": "build",
+			"group": "build"
 		},
 		{
 			"type": "shell",
