Replace all constant number macro into enum.
Replace the default build task by make final instead of make image, now
make image will only be called when you are using F5 for simulation

Update README.md/Known-bugs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,6 +3,15 @@
 	"tasks": [
 		{
 			"type": "shell",
+			"label": "(Build) Make kernel final",
+			"command": "make final",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
+		},
+		{
+			"type": "shell",
 			"label": "(Build) Make kernel image",
 			"command": "make image",
 			"group": "build"
