Finish chapter 7 part j, also split the symbol table to keep our kernel
smaller than 64K.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "request": "launch",
-            "name": "(gdb) Attach to kernel",
+            "name": "(gdb) Debug the kernel",
             "type": "cppdbg",
             "program": "${workspaceFolder}/kernel.bin",
             "MIMode": "gdb",
@@ -21,7 +21,14 @@
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
                 }
+            ],
+            "postRemoteConnectCommands": [
+                {
+                    "description": "加载符号文件",
+                    "text": "symbol ${workspaceFolder}/kernel.dbg"
+                }
             ]
+
         }
     ]
 }
