--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
+        "*.asm": "asm-collection",
         "*.h": "c",
         "*.c": "c",
-        "*.cpp": "cpp"
+        "*.cpp": "cpp",
+        "cstdint": "cpp"
     }
 }
